--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,31 @@
-name: Trivy Scan Docker Image
+name: Node Docker Image Scan
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
+    branches: [ main ]
 
 jobs:
-  scan:
+  docker-scan:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Build Docker image
-        run: docker build -t myapp:latest .
+        run: docker build -t demo-node:latest .
 
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@v0.14.0
+      - name: Scan image with Trivy
+        uses: aquasecurity/trivy-action@master
         with:
-          image-ref: "myapp:latest"
-          format: "table"
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
+          image-ref: demo-node:latest
+          format: table
+          output: trivy-report.txt
+          severity: HIGH,CRITICAL
+          exit-code: 1
+
+      - name: Upload scan report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: scan-report
+          path: trivy-report.txt
